--- a/index.html
+++ b/index.html
@@ -19,43 +19,56 @@
     
     <link href="https://fonts.googleapis.com/css2?family=Amiri&family=Cinzel:wght@400;700&family=Scheherazade+New:wght@400;700&display=swap" rel="stylesheet">
 <style>
-    /* 1. STOPS THE WHITE GAP (PULL-DOWN) */
-    html, body { 
-        overscroll-behavior-y: none; 
-        background-color: #030e26 !important; 
-        margin: 0; 
-        padding: 0;
-        scrollbar-width: none !important;
+    /* 1. THE TOP LOGO: Fits "QALB-E-DUA" on one line on all iPhones */
+    /* Only targets the main title on the home screen */
+    #root > div > div:first-child .font-heading {
+        white-space: nowrap !important;
+        font-size: clamp(20px, 6.5vw, 24px) !important;
+        display: block !important;
+        text-align: center !important;
     }
 
-    /* 2. STOPS THE BLUE FLASHING ON ALL BUTTONS */
+    /* 2. THE INTERNAL TITLES: Stops "..." and shows full names */
+    /* Allows titles like "MORNING & EVENING" to wrap to 2 lines so they are NOT cut off */
+    header .font-heading, 
+    nav .font-heading,
+    .title-container .font-heading {
+        white-space: normal !important;
+        font-size: 1.1rem !important;
+        line-height: 1.2 !important;
+        overflow: visible !important;
+        text-overflow: unset !important;
+    }
+
+    /* 3. CLOCK/NOTCH FIX: Pushes text down so it NEVER touches the iPhone clock */
+    body {
+        padding-top: env(safe-area-inset-top) !important;
+        background-color: #030e26 !important;
+        margin: 0;
+        padding-left: 0;
+        padding-right: 0;
+        overflow-x: hidden;
+    }
+
+    /* 4. STOP BLUE FLASHING AND BUTTON HIGHLIGHTS */
     * {
         -webkit-tap-highlight-color: transparent !important;
         outline: none !important;
     }
 
-    /* 3. HIDES THE SCROLLBAR LINE (AERO) */
-    ::-webkit-scrollbar { 
-        display: none !important; 
-        width: 0 !important; 
+    /* 5. STOP WHITE GAP AND HIDE SCROLLBAR */
+    html {
+        background-color: #030e26 !important;
+        overscroll-behavior-y: none !important;
     }
 
-    /* 4. FIXES OVERLAP WITH THE IPHONE CLOCK/NOTCH */
-    body { 
-        padding-top: env(safe-area-inset-top); 
-        overflow-x: hidden; 
+    ::-webkit-scrollbar {
+        display: none !important;
+        width: 0 !important;
     }
 
-    /* 5. FIXES THE LOGO: "QALB-E-DUA" stays on one line.
-       We use 20px so it fits perfectly on all iPhones without cutting off other pages. */
-    .font-heading { 
-        font-family: 'Cinzel', serif; 
-        font-size: 20px !important; 
-        line-height: 1.2 !important;
-        text-align: center !important;
-    }
-
-    /* 6. YOUR ORIGINAL STYLES - NO CHANGES */
+    /* 6. YOUR ORIGINAL STYLES - RESTORED */
+    .font-heading { font-family: 'Cinzel', serif; }
     .font-arabic { font-family: 'Scheherazade New', serif; line-height: 2.3; }
     .no-scrollbar::-webkit-scrollbar { display: none; }
     .animate-in { animation: fadeIn 0.4s ease-out; }
