--- a/index.html
+++ b/index.html
@@ -18,35 +18,40 @@
     
     <link href="https://fonts.googleapis.com/css2?family=Amiri&family=Cinzel:wght@400;700&family=Scheherazade+New:wght@400;700&display=swap" rel="stylesheet">
 <style>
-    /* 1. THE STATUS BAR FIX: Pushes the header down so it never touches the clock */
+    /* 1. STATUS BAR & HEADER FIX: Pushes text down so it NEVER touches the clock/battery */
     header, .header-container, #root > div > div:first-child {
-        padding-top: env(safe-area-inset-top) !important;
+        padding-top: calc(env(safe-area-inset-top) + 10px) !important; /* Extra 10px to stop clipping */
         background-color: #030e26 !important;
         display: flex !important;
         flex-direction: column !important;
         justify-content: center !important;
-        min-height: calc(44px + env(safe-area-inset-top)) !important;
+        min-height: calc(70px + env(safe-area-inset-top)) !important; /* Taller header for long titles */
     }
 
-    /* 2. THE TITLES FIX: Keeps logo on one line, but lets internal titles wrap */
-    .font-heading { font-family: 'Cinzel', serif; line-height: 1.2 !important; }
+    /* 2. TITLE FIX: Stop cutting off ("...") and show full titles */
+    .font-heading { 
+        font-family: 'Cinzel', serif; 
+        line-height: 1.3 !important;
+        white-space: normal !important; /* Allows text to wrap to 2 lines instead of cutting off */
+        text-overflow: clip !important;
+        overflow: visible !important;
+    }
 
-    /* Home Screen Logo (QALB-E-DUA) */
+    /* Target ONLY the main "QALB-E-DUA" logo to stay on one line */
     #root > div > div:first-child .font-heading {
         white-space: nowrap !important;
         font-size: 22px !important;
-        margin-top: 10px !important;
     }
 
-    /* Internal Page Titles (e.g., Visiting Graves) */
+    /* Internal Page Titles (e.g., Prayers After Salah) */
     header .font-heading, .title-container .font-heading {
-        font-size: 16px !important;  /* Smaller so it fits between icons */
-        white-space: normal !important; /* Allows wrapping if title is very long */
-        max-width: 70% !important;   /* Centers it without hitting back/gear icons */
+        font-size: 16px !important;
+        max-width: 80% !important; /* Gives room between the back button and gear icon */
         margin: 0 auto !important;
+        text-align: center !important;
     }
 
-    /* 3. STOP BLUE FLASHING ON BUTTONS */
+    /* 3. STOP BLUE FLASHING WHEN PRESSING BUTTONS */
     * {
         -webkit-tap-highlight-color: transparent !important;
         outline: none !important;
