--- a/index.html
+++ b/index.html
@@ -18,56 +18,62 @@
     
     <link href="https://fonts.googleapis.com/css2?family=Amiri&family=Cinzel:wght@400;700&family=Scheherazade+New:wght@400;700&display=swap" rel="stylesheet">
 <style>
-    /* 1. STATUS BAR & HEADER FIX: Pushes text down so it NEVER touches the clock/battery */
-    header, .header-container, #root > div > div:first-child {
-        padding-top: calc(env(safe-area-inset-top) + 10px) !important; /* Extra 10px to stop clipping */
+    /* 1. THE GAP FIX: Stops the page from sliding left or right */
+    html, body {
+        width: 100%;
+        margin: 0;
+        padding: 0;
+        /* Stops the white pull-down and the side-to-side gap */
+        overscroll-behavior: none !important; 
+        overflow-x: hidden !important; 
+        position: relative;
         background-color: #030e26 !important;
-        display: flex !important;
-        flex-direction: column !important;
-        justify-content: center !important;
-        min-height: calc(70px + env(safe-area-inset-top)) !important; /* Taller header for long titles */
     }
 
-    /* 2. TITLE FIX: Stop cutting off ("...") and show full titles */
-    .font-heading { 
-        font-family: 'Cinzel', serif; 
-        line-height: 1.3 !important;
-        white-space: normal !important; /* Allows text to wrap to 2 lines instead of cutting off */
-        text-overflow: clip !important;
-        overflow: visible !important;
+    #root {
+        width: 100%;
+        overflow-x: hidden !important;
     }
 
-    /* Target ONLY the main "QALB-E-DUA" logo to stay on one line */
-    #root > div > div:first-child .font-heading {
-        white-space: nowrap !important;
-        font-size: 22px !important;
+    /* 2. CLOCK FIX: Pushes everything down away from the iPhone status bar */
+    body {
+        padding-top: env(safe-area-inset-top);
     }
 
-    /* Internal Page Titles (e.g., Prayers After Salah) */
-    header .font-heading, .title-container .font-heading {
-        font-size: 16px !important;
-        max-width: 80% !important; /* Gives room between the back button and gear icon */
-        margin: 0 auto !important;
-        text-align: center !important;
-    }
-
-    /* 3. STOP BLUE FLASHING WHEN PRESSING BUTTONS */
+    /* 3. STOP BLUE FLASHING ON BUTTONS */
     * {
         -webkit-tap-highlight-color: transparent !important;
         outline: none !important;
+        box-sizing: border-box; /* Crucial to keep everything inside the screen */
     }
 
-    /* 4. HIDE SCROLLBAR & STOP WHITE GAP */
+    /* 4. HIDE SCROLLBAR */
     ::-webkit-scrollbar { display: none !important; }
-    html, body { 
-        overscroll-behavior-y: none; 
-        background-color: #030e26 !important; 
-        scrollbar-width: none !important;
-        margin: 0;
-        padding: 0;
+
+    /* 5. LOGO & TITLES FIXES */
+    .font-heading { 
+        font-family: 'Cinzel', serif; 
+        line-height: 1.2 !important;
     }
 
-    /* 5. YOUR ORIGINAL STYLES */
+    /* A) MAIN LOGO (QALB-E-DUA): Fits on one line */
+    #root > div > div:first-child .font-heading {
+        white-space: nowrap !important;
+        font-size: 22px !important;
+        padding: 10px 0 !important;
+        display: block !important;
+    }
+
+    /* B) PAGE TITLES (Morning Adhkar, etc.): No "..." and No side gap */
+    header .font-heading, nav .font-heading, .header-title {
+        white-space: normal !important; /* Wrap to 2nd line so it is never cut off */
+        font-size: 18px !important;     /* Fits perfectly between icons */
+        max-width: 80% !important;     /* Stops text from pushing to the edges */
+        margin: 0 auto !important;
+        overflow: visible !important;
+    }
+
+    /* 6. YOUR ORIGINAL STYLES */
     .font-arabic { font-family: 'Scheherazade New', serif; line-height: 2.3; }
     .no-scrollbar::-webkit-scrollbar { display: none; }
     .animate-in { animation: fadeIn 0.4s ease-out; }
