--- a/index.html
+++ b/index.html
@@ -18,59 +18,58 @@
     
     <link href="https://fonts.googleapis.com/css2?family=Amiri&family=Cinzel:wght@400;700&family=Scheherazade+New:wght@400;700&display=swap" rel="stylesheet">
 <style>
-    /* 1. THE GAP FIX: Stops the page from sliding left or right */
+    /* 1. LOCK SCREEN: Stops side-to-side gap and white pull-down gap */
     html, body {
         width: 100%;
         margin: 0;
         padding: 0;
-        /* Stops the white pull-down and the side-to-side gap */
         overscroll-behavior: none !important; 
         overflow-x: hidden !important; 
-        position: relative;
         background-color: #030e26 !important;
     }
 
-    #root {
-        width: 100%;
-        overflow-x: hidden !important;
+    /* 2. STICKY HEADER & INDEX: This keeps the menu at the top while you scroll */
+    /* It pushes the text down so it never touches the iPhone clock */
+    header, .header-container, #root > div > div:first-child {
+        position: sticky !important;
+        top: 0 !important;
+        z-index: 1000 !important;
+        background-color: #030e26 !important;
+        padding-top: env(safe-area-inset-top) !important;
+        padding-bottom: 5px !important;
     }
 
-    /* 2. CLOCK FIX: Pushes everything down away from the iPhone status bar */
-    body {
-        padding-top: env(safe-area-inset-top);
+    /* This targets the horizontal row of Dua buttons (1. Dua For...) */
+    .flex.overflow-x-auto {
+        position: sticky !important;
+        top: 55px !important; /* Positions buttons right below the header title */
+        z-index: 999 !important;
+        background-color: #030e26 !important;
+        padding-bottom: 10px !important;
+        padding-top: 5px !important;
+        border-bottom: 1px solid rgba(255,255,255,0.1);
     }
 
-    /* 3. STOP BLUE FLASHING ON BUTTONS */
+    /* 3. STOP BLUE FLASHING ON ALL BUTTONS */
     * {
         -webkit-tap-highlight-color: transparent !important;
         outline: none !important;
-        box-sizing: border-box; /* Crucial to keep everything inside the screen */
     }
 
-    /* 4. HIDE SCROLLBAR */
+    /* 4. HIDE SCROLLBAR LINE (AERO) */
     ::-webkit-scrollbar { display: none !important; }
+    * { scrollbar-width: none !important; }
 
-    /* 5. LOGO & TITLES FIXES */
+    /* 5. TITLE LOOK: One line, cuts off with "..." (As you requested) */
     .font-heading { 
         font-family: 'Cinzel', serif; 
         line-height: 1.2 !important;
-    }
-
-    /* A) MAIN LOGO (QALB-E-DUA): Fits on one line */
-    #root > div > div:first-child .font-heading {
-        white-space: nowrap !important;
-        font-size: 22px !important;
-        padding: 10px 0 !important;
+        white-space: nowrap !important;     
+        overflow: hidden !important;        
+        text-overflow: ellipsis !important;   
+        font-size: 20px !important;         
+        text-align: center !important;
         display: block !important;
-    }
-
-    /* B) PAGE TITLES (Morning Adhkar, etc.): No "..." and No side gap */
-    header .font-heading, nav .font-heading, .header-title {
-        white-space: normal !important; /* Wrap to 2nd line so it is never cut off */
-        font-size: 18px !important;     /* Fits perfectly between icons */
-        max-width: 80% !important;     /* Stops text from pushing to the edges */
-        margin: 0 auto !important;
-        overflow: visible !important;
     }
 
     /* 6. YOUR ORIGINAL STYLES */
