--- a/index.html
+++ b/index.html
@@ -18,17 +18,24 @@
     
     <link href="https://fonts.googleapis.com/css2?family=Amiri&family=Cinzel:wght@400;700&family=Scheherazade+New:wght@400;700&display=swap" rel="stylesheet">
 <style>
-    /* 1. LOCK SCREEN & BACKGROUND: No white gap, no side gap */
+    /* 1. GLOBAL FIXES: Background, Side Gap, and Blue Flashing */
     html, body {
         width: 100%;
         margin: 0;
         padding: 0;
-        overscroll-behavior-y: none !important; 
+        overscroll-behavior: none !important; 
+        overflow-x: hidden !important; 
         background-color: #030e26 !important;
-        /* We remove 'overflow: hidden' here so 'sticky' actually works */
     }
 
-    /* 2. STICKY HEADER & INDEX: This keeps them at the top when you scroll */
+    * {
+        -webkit-tap-highlight-color: transparent !important;
+        outline: none !important;
+    }
+
+    ::-webkit-scrollbar { display: none !important; }
+
+    /* 2. STICKY HEADER & INDEX: Menu stays at the top while scrolling */
     header, .header-container, #root > div > div:first-child {
         position: -webkit-sticky !important;
         position: sticky !important;
@@ -39,42 +46,45 @@
         padding-bottom: 5px !important;
     }
 
-    /* THIS IS THE INDEX FIX: It makes the buttons stay at the top 
-       so you can see them the moment you scroll back up */
+    /* Target the Index buttons row */
     .flex.overflow-x-auto, nav.flex, [class*="overflow-x-auto"] {
         position: -webkit-sticky !important;
         position: sticky !important;
-        top: 60px !important; /* Adjust this if your title is taller */
+        top: 60px !important; 
         z-index: 999 !important;
         background-color: #030e26 !important;
-        padding-top: 10px !important;
-        padding-bottom: 10px !important;
+        padding: 10px 0 !important;
         border-bottom: 1px solid rgba(255,255,255,0.1);
     }
 
-    /* 3. STOP BLUE FLASHING ON BUTTONS */
-    * {
-        -webkit-tap-highlight-color: transparent !important;
-        outline: none !important;
-    }
-
-    /* 4. HIDE SCROLLBAR LINE (AERO) */
-    ::-webkit-scrollbar { display: none !important; }
-    * { scrollbar-width: none !important; }
-
-    /* 5. TITLE LOOK: One line, cuts off with "..." (To keep layout clean) */
+    /* 3. LOGO vs TITLES: The specific fix for your issue */
     .font-heading { 
         font-family: 'Cinzel', serif; 
         line-height: 1.2 !important;
-        white-space: nowrap !important;     
-        overflow: hidden !important;        
-        text-overflow: ellipsis !important;   
-        font-size: 20px !important;         
         text-align: center !important;
+    }
+
+    /* A) MAIN LOGO (QALB-E-DUA): Keep on one line and fit all iPhones */
+    header .font-heading, #root > div > div:first-child .font-heading {
+        white-space: nowrap !important;
+        font-size: 20px !important;
         display: block !important;
     }
 
-    /* 6. YOUR ORIGINAL STYLES */
+    /* B) INSIDE PAGE TITLES (The Gold text in white boxes): 
+       ALLOW them to wrap to a second line so they are NEVER cut off */
+    main .font-heading, 
+    .p-4 .font-heading, 
+    .p-6 .font-heading, 
+    .max-w-4xl .font-heading {
+        white-space: normal !important;   /* Allows text to wrap */
+        overflow: visible !important;
+        text-overflow: unset !important;
+        font-size: 1.2rem !important;    /* Normal readable size */
+        display: block !important;
+    }
+
+    /* 4. YOUR ORIGINAL STYLES */
     .font-arabic { font-family: 'Scheherazade New', serif; line-height: 2.3; }
     .no-scrollbar::-webkit-scrollbar { display: none; }
     .animate-in { animation: fadeIn 0.4s ease-out; }
