--- a/index.html
+++ b/index.html
@@ -18,73 +18,78 @@
     
     <link href="https://fonts.googleapis.com/css2?family=Amiri&family=Cinzel:wght@400;700&family=Scheherazade+New:wght@400;700&display=swap" rel="stylesheet">
 <style>
-    /* 1. GLOBAL FIXES: Background, Side Gap, and Blue Flashing */
+    /* 1. GAP & SCROLLBAR FIXES */
     html, body {
         width: 100%;
         margin: 0;
         padding: 0;
-        overscroll-behavior: none !important; 
-        overflow-x: hidden !important; 
+        overscroll-behavior-y: none !important;
         background-color: #030e26 !important;
+        /* Sticky works better if the body doesn't have overflow-x: hidden */
     }
 
-    * {
-        -webkit-tap-highlight-color: transparent !important;
-        outline: none !important;
+    #root {
+        width: 100%;
+        overflow-x: hidden !important; /* Side gap fix moved here */
     }
 
     ::-webkit-scrollbar { display: none !important; }
+    * { scrollbar-width: none !important; }
 
-    /* 2. STICKY HEADER & INDEX: Menu stays at the top while scrolling */
+    /* 2. THE STICKY FIX: Forces Header and Index Buttons to stay at the top */
+    /* Header (Title) Sticks */
     header, .header-container, #root > div > div:first-child {
         position: -webkit-sticky !important;
         position: sticky !important;
         top: 0 !important;
-        z-index: 1000 !important;
+        z-index: 1100 !important;
         background-color: #030e26 !important;
         padding-top: env(safe-area-inset-top) !important;
         padding-bottom: 5px !important;
     }
 
-    /* Target the Index buttons row */
-    .flex.overflow-x-auto, nav.flex, [class*="overflow-x-auto"] {
+    /* Index Buttons (1. Dua For...) Stick right below the title */
+    .flex.overflow-x-auto, [class*="overflow-x-auto"], nav.flex {
         position: -webkit-sticky !important;
         position: sticky !important;
-        top: 60px !important; 
-        z-index: 999 !important;
+        top: 60px !important; /* Sitting right below the main title */
+        z-index: 1050 !important;
         background-color: #030e26 !important;
         padding: 10px 0 !important;
         border-bottom: 1px solid rgba(255,255,255,0.1);
     }
 
-    /* 3. LOGO vs TITLES: The specific fix for your issue */
+    /* 3. LOGO vs TITLES: Keeping your working fixes */
     .font-heading { 
         font-family: 'Cinzel', serif; 
-        line-height: 1.2 !important;
-        text-align: center !important;
+        line-height: 1.2 !important; 
+        text-align: center !important; 
     }
 
-    /* A) MAIN LOGO (QALB-E-DUA): Keep on one line and fit all iPhones */
-    header .font-heading, #root > div > div:first-child .font-heading {
+    /* Main Logo: Stays on one line */
+    #root > div > div:first-child .font-heading {
         white-space: nowrap !important;
         font-size: 20px !important;
-        display: block !important;
     }
 
-    /* B) INSIDE PAGE TITLES (The Gold text in white boxes): 
-       ALLOW them to wrap to a second line so they are NEVER cut off */
+    /* Dua Titles inside boxes: ALLOW wrapping so they are NEVER cut off */
     main .font-heading, 
     .p-4 .font-heading, 
-    .p-6 .font-heading, 
     .max-w-4xl .font-heading {
-        white-space: normal !important;   /* Allows text to wrap */
+        white-space: normal !important;
         overflow: visible !important;
         text-overflow: unset !important;
-        font-size: 1.2rem !important;    /* Normal readable size */
+        font-size: 1.15rem !important;
         display: block !important;
     }
 
-    /* 4. YOUR ORIGINAL STYLES */
+    /* 4. STOP BLUE FLASHING */
+    * {
+        -webkit-tap-highlight-color: transparent !important;
+        outline: none !important;
+    }
+
+    /* 5. ORIGINAL STYLES */
     .font-arabic { font-family: 'Scheherazade New', serif; line-height: 2.3; }
     .no-scrollbar::-webkit-scrollbar { display: none; }
     .animate-in { animation: fadeIn 0.4s ease-out; }
