--- a/index.html
+++ b/index.html
@@ -17,78 +17,56 @@
     <script src="https://cdn.tailwindcss.com"></script>
     
     <link href="https://fonts.googleapis.com/css2?family=Amiri&family=Cinzel:wght@400;700&family=Scheherazade+New:wght@400;700&display=swap" rel="stylesheet">
+
 <style>
-    /* 1. THE STICKY FIX: This forces the Index to stay at the top */
-    /* We must remove overflow:hidden from html/body for this to work */
-    html, body {
-        margin: 0;
-        padding: 0;
-        background-color: #030e26 !important;
-        overscroll-behavior-y: none !important;
-    }
-
-    /* 2. THE HEADER & INDEX CONTAINER */
-    /* This makes the Title AND the Buttons stick together at the top */
+    /* 1. FIX THE OVERLAP WITH THE CLOCK */
+    /* This ensures headers never touch the iPhone status bar icons */
     header, .header-container, #root > div > div:first-child {
-        position: -webkit-sticky !important;
-        position: sticky !important;
-        top: 0 !important;
-        z-index: 2000 !important; /* Highest priority */
-        background-color: #030e26 !important;
         padding-top: env(safe-area-inset-top) !important;
+        min-height: calc(60px + env(safe-area-inset-top)) !important;
+        display: flex !important;
+        flex-direction: column !important;
+        justify-content: center !important;
     }
 
-    /* Target the row of buttons (1. Dua For, 2. Dua For...) */
-    .flex.overflow-x-auto, nav.flex, [class*="overflow-x-auto"] {
-        position: -webkit-sticky !important;
-        position: sticky !important;
-        /* This places the buttons right under the title */
-        top: 54px !important; 
-        z-index: 1999 !important;
-        background-color: #030e26 !important;
-        padding: 12px 0 !important;
-        border-bottom: 1px solid rgba(255,255,255,0.1);
-    }
-
-    /* 3. SIDE GAP FIX: Locks the screen so it doesn't turn right */
-    #root {
-        width: 100%;
-        overflow-x: hidden !important;
-        display: block !important;
-    }
-
-    /* 4. LOGO & TITLES FIXES */
+    /* 2. FIX THE TITLES (LOGO VS INTERNAL PAGES) */
     .font-heading { 
         font-family: 'Cinzel', serif; 
         line-height: 1.2 !important;
-        text-align: center !important;
     }
 
-    /* Main Logo "QALB-E-DUA" on one line */
+    /* Target ONLY the main "QALB-E-DUA" logo to stay on one line */
     #root > div > div:first-child .font-heading {
         white-space: nowrap !important;
         font-size: 22px !important;
-        display: block !important;
     }
 
-    /* Internal Dua Titles (Gold text) wrap so they are NEVER cut off */
-    main .font-heading, .p-4 .font-heading, .max-w-4xl .font-heading {
+    /* ALLOW other page titles like "PRAYERS OF THE PROPHET" to wrap naturally */
+    /* This stops the "..." cut off problem in your picture */
+    header .font-heading, .title-container .font-heading {
         white-space: normal !important;
-        overflow: visible !important;
-        text-overflow: unset !important;
-        font-size: 1.15rem !important;
-        display: block !important;
+        font-size: 1.2rem !important;
+        width: 90% !important;
+        margin: 0 auto !important;
     }
 
-    /* 5. STOP BLUE FLASHING & HIDE SCROLLBAR */
+    /* 3. STOP THE BLUE FLASHING WHEN PRESSING BUTTONS */
     * {
         -webkit-tap-highlight-color: transparent !important;
         outline: none !important;
     }
-    ::-webkit-scrollbar { display: none !important; }
-    * { scrollbar-width: none !important; }
 
-    /* 6. ORIGINAL STYLES */
+    /* 4. HIDE SCROLLBAR & STOP WHITE GAP */
+    ::-webkit-scrollbar { display: none !important; }
+    html, body { 
+        overscroll-behavior-y: none; 
+        background-color: #030e26 !important; 
+        scrollbar-width: none !important;
+        margin: 0;
+        padding: 0;
+    }
+
+    /* 5. YOUR ORIGINAL STYLES */
     .font-arabic { font-family: 'Scheherazade New', serif; line-height: 2.3; }
     .no-scrollbar::-webkit-scrollbar { display: none; }
     .animate-in { animation: fadeIn 0.4s ease-out; }
