--- a/index.html
+++ b/index.html
@@ -19,69 +19,67 @@
     <link href="https://fonts.googleapis.com/css2?family=Amiri&family=Cinzel:wght@400;700&family=Scheherazade+New:wght@400;700&display=swap" rel="stylesheet">
 
 <style>
-    /* 1. THE STICKY FIX: This forces the Index to stay at the top */
-    /* We must remove overflow:hidden from html/body for this to work */
+    /* 1. PREVENT WHITE GAP (TOP) & SIDE GAP (RIGHT) */
     html, body {
+        width: 100%;
         margin: 0;
         padding: 0;
         background-color: #030e26 !important;
-        overscroll-behavior-y: none !important;
+        overscroll-behavior: none !important;
     }
 
-    /* 2. THE HEADER & INDEX CONTAINER */
-    /* This makes the Title AND the Buttons stick together at the top */
+    #root {
+        width: 100%;
+        overflow-x: hidden !important; /* This stops the "turn right" side gap */
+    }
+
+    /* 2. STICKY HEADER & INDEX: Stays at top while you scroll */
     header, .header-container, #root > div > div:first-child {
         position: -webkit-sticky !important;
         position: sticky !important;
         top: 0 !important;
-        z-index: 2000 !important; /* Highest priority */
+        z-index: 2000 !important;
         background-color: #030e26 !important;
         padding-top: env(safe-area-inset-top) !important;
+        padding-bottom: 5px !important;
     }
 
-    /* Target the row of buttons (1. Dua For, 2. Dua For...) */
-    .flex.overflow-x-auto, nav.flex, [class*="overflow-x-auto"] {
+    /* This keeps the Index buttons (1. Dua For...) at the top */
+    .flex.overflow-x-auto, [class*="overflow-x-auto"], nav.flex {
         position: -webkit-sticky !important;
         position: sticky !important;
-        /* This places the buttons right under the title */
-        top: 54px !important; 
+        top: 60px !important; /* Sits right below the page title */
         z-index: 1999 !important;
         background-color: #030e26 !important;
-        padding: 12px 0 !important;
+        padding: 10px 0 !important;
         border-bottom: 1px solid rgba(255,255,255,0.1);
     }
 
-    /* 3. SIDE GAP FIX: Locks the screen so it doesn't turn right */
-    #root {
-        width: 100%;
-        overflow-x: hidden !important;
-        display: block !important;
-    }
-
-    /* 4. LOGO & TITLES FIXES */
+    /* 3. LOGO vs TITLES: No more cutting off with "..." */
     .font-heading { 
         font-family: 'Cinzel', serif; 
         line-height: 1.2 !important;
         text-align: center !important;
     }
 
-    /* Main Logo "QALB-E-DUA" on one line */
+    /* MAIN LOGO (Home Screen Only): Keeps QALB-E-DUA on one line */
     #root > div > div:first-child .font-heading {
         white-space: nowrap !important;
         font-size: 22px !important;
         display: block !important;
     }
 
-    /* Internal Dua Titles (Gold text) wrap so they are NEVER cut off */
-    main .font-heading, .p-4 .font-heading, .max-w-4xl .font-heading {
-        white-space: normal !important;
+    /* PAGE TITLES (Inside Pages): ALLOWS wrapping so they are NEVER cut off */
+    header .font-heading, .title-container .font-heading {
+        white-space: normal !important;   /* This shows the full title, no "..." */
         overflow: visible !important;
         text-overflow: unset !important;
-        font-size: 1.15rem !important;
-        display: block !important;
+        font-size: 18px !important;       /* Fits perfectly between buttons */
+        max-width: 80% !important;
+        margin: 0 auto !important;
     }
 
-    /* 5. STOP BLUE FLASHING & HIDE SCROLLBAR */
+    /* 4. STOP BLUE FLASHING & HIDE SCROLLBAR */
     * {
         -webkit-tap-highlight-color: transparent !important;
         outline: none !important;
@@ -89,7 +87,7 @@
     ::-webkit-scrollbar { display: none !important; }
     * { scrollbar-width: none !important; }
 
-    /* 6. ORIGINAL STYLES */
+    /* 5. ORIGINAL STYLES */
     .font-arabic { font-family: 'Scheherazade New', serif; line-height: 2.3; }
     .no-scrollbar::-webkit-scrollbar { display: none; }
     .animate-in { animation: fadeIn 0.4s ease-out; }
