--- a/index.html
+++ b/index.html
@@ -19,21 +19,33 @@
     <link href="https://fonts.googleapis.com/css2?family=Amiri&family=Cinzel:wght@400;700&family=Scheherazade+New:wght@400;700&display=swap" rel="stylesheet">
 
 <style>
-    /* 1. PREVENT WHITE GAP (TOP) & SIDE GAP (RIGHT) */
+    /* 1. GLOBAL FIXES: Background, Side Gaps, and No Flashing */
     html, body {
         width: 100%;
         margin: 0;
         padding: 0;
         background-color: #030e26 !important;
-        overscroll-behavior: none !important;
+        overscroll-behavior: none !important; /* Stops white top gap and side bounce */
     }
 
     #root {
         width: 100%;
-        overflow-x: hidden !important; /* This stops the "turn right" side gap */
+        position: relative;
+        /* This stops the side-to-side gap without breaking the sticky menu */
+        overflow-x: clip !important; 
     }
 
-    /* 2. STICKY HEADER & INDEX: Stays at top while you scroll */
+    * {
+        -webkit-tap-highlight-color: transparent !important;
+        outline: none !important;
+    }
+
+    ::-webkit-scrollbar { display: none !important; width: 0 !important; }
+    * { scrollbar-width: none !important; }
+
+    /* 2. THE STICKY FIX: Forces Header & Index Menu to stay at the top */
+    /* This allows you to change Duas while scrolling down */
+    
     header, .header-container, #root > div > div:first-child {
         position: -webkit-sticky !important;
         position: sticky !important;
@@ -44,7 +56,7 @@
         padding-bottom: 5px !important;
     }
 
-    /* This keeps the Index buttons (1. Dua For...) at the top */
+    /* Target the Index Menu (The horizontal buttons: 1. Dua For, 2. Dua For...) */
     .flex.overflow-x-auto, [class*="overflow-x-auto"], nav.flex {
         position: -webkit-sticky !important;
         position: sticky !important;
@@ -55,7 +67,7 @@
         border-bottom: 1px solid rgba(255,255,255,0.1);
     }
 
-    /* 3. LOGO vs TITLES: No more cutting off with "..." */
+    /* 3. LOGO & TITLES FIXES: No more cutting off with "..." */
     .font-heading { 
         font-family: 'Cinzel', serif; 
         line-height: 1.2 !important;
@@ -66,28 +78,20 @@
     #root > div > div:first-child .font-heading {
         white-space: nowrap !important;
         font-size: 22px !important;
+    }
+
+    /* INTERNAL PAGE TITLES: ALLOWS wrapping so they are NEVER cut off */
+    header .font-heading, .title-container .font-heading {
+        white-space: normal !important;   /* Fixes the "..." cut off */
+        overflow: visible !important;
+        text-overflow: unset !important;
+        font-size: 18px !important;
+        max-width: 80% !important;
+        margin: 0 auto !important;
         display: block !important;
     }
 
-    /* PAGE TITLES (Inside Pages): ALLOWS wrapping so they are NEVER cut off */
-    header .font-heading, .title-container .font-heading {
-        white-space: normal !important;   /* This shows the full title, no "..." */
-        overflow: visible !important;
-        text-overflow: unset !important;
-        font-size: 18px !important;       /* Fits perfectly between buttons */
-        max-width: 80% !important;
-        margin: 0 auto !important;
-    }
-
-    /* 4. STOP BLUE FLASHING & HIDE SCROLLBAR */
-    * {
-        -webkit-tap-highlight-color: transparent !important;
-        outline: none !important;
-    }
-    ::-webkit-scrollbar { display: none !important; }
-    * { scrollbar-width: none !important; }
-
-    /* 5. ORIGINAL STYLES */
+    /* 4. ORIGINAL STYLES */
     .font-arabic { font-family: 'Scheherazade New', serif; line-height: 2.3; }
     .no-scrollbar::-webkit-scrollbar { display: none; }
     .animate-in { animation: fadeIn 0.4s ease-out; }
