--- a/index.html
+++ b/index.html
@@ -19,24 +19,23 @@
     <link href="https://fonts.googleapis.com/css2?family=Amiri&family=Cinzel:wght@400;700&family=Scheherazade+New:wght@400;700&display=swap" rel="stylesheet">
 
 <style>
-    /* 1. BACKGROUND & GAP FIXES */
-    html {
-        /* This stops the white pull-down gap at the browser level */
-        background-color: #030e26 !important;
-        overscroll-behavior: none !important;
-    }
-
-    body {
+    /* 1. BACKGROUND & GAP FIXES: Stops white pull-down and side gap */
+    html, body {
         margin: 0;
         padding: 0;
         background-color: #030e26 !important;
-        /* Stops the side-to-side gap without breaking the sticky menu */
-        overflow-x: clip !important;
-        width: 100%;
+        overscroll-behavior-y: none !important;
     }
 
-    /* 2. STICKY HEADER & INDEX FIX */
-    /* This forces the Title and the horizontal Buttons to stay at the top while scrolling */
+    /* This stops the "turn right" side gap without breaking the sticky menu */
+    #root {
+        width: 100%;
+        overflow-x: clip !important;
+        position: relative;
+    }
+
+    /* 2. STICKY HEADER & INDEX: Keeps the Title and the Buttons at the top */
+    /* This allows you to change Duas while you are scrolling down */
     
     header, .header-container, #root > div > div:first-child {
         position: -webkit-sticky !important;
@@ -48,49 +47,54 @@
         padding-bottom: 5px !important;
     }
 
-    /* This targets the Index buttons (1. Dua For, 2. Dua For...) */
-    .flex.overflow-x-auto, nav.flex, [class*="overflow-x-auto"] {
+    /* Target the row of buttons (1. Dua For, 2. Dua For...) */
+    nav, .flex.overflow-x-auto, [class*="overflow-x-auto"] {
         position: -webkit-sticky !important;
         position: sticky !important;
-        /* This sits right below the header title */
-        top: 55px !important; 
+        top: 60px !important; /* Sits right below the title */
         z-index: 1999 !important;
         background-color: #030e26 !important;
         padding: 10px 0 !important;
         border-bottom: 1px solid rgba(255,255,255,0.1);
     }
 
-    /* 3. TITLE FIX: Stop cutting off names with "..." */
+    /* 3. LOGO & TITLE FIXES: No more "..." cutting off */
     .font-heading { 
         font-family: 'Cinzel', serif; 
         line-height: 1.2 !important;
         text-align: center !important;
     }
 
-    /* Target ONLY the main "QALB-E-DUA" logo to stay on one line */
+    /* Home Screen Logo (QALB-E-DUA): Keep on one line */
     #root > div > div:first-child .font-heading {
         white-space: nowrap !important;
         font-size: 22px !important;
+        display: block !important;
     }
 
-    /* Target Page Titles (PRAYERS OF THE PROPHET, etc.) to show FULL text */
+    /* Internal Page Titles: ALLOW wrapping so they are NEVER cut off */
+    /* This makes "PRAYERS OF THE PROPHET" show the FULL name */
     header .font-heading, .title-container .font-heading {
-        white-space: normal !important;   /* Allows text to wrap to 2 lines */
+        white-space: normal !important;   /* Shows the FULL name */
         overflow: visible !important;
         text-overflow: unset !important;
-        font-size: 16px !important;       /* Smaller so it fits between icons */
+        font-size: 18px !important;
         max-width: 80% !important;
         margin: 0 auto !important;
         display: block !important;
     }
 
-    /* 4. STOP BLUE FLASHING ON BUTTONS */
+    /* 4. BUTTONS FIX: Ensures buttons look normal and fit well */
+    .flex.overflow-x-auto button {
+        flex-shrink: 0 !important;
+        white-space: nowrap !important;
+    }
+
+    /* 5. STOP BLUE FLASHING & HIDE SCROLLBAR */
     * {
         -webkit-tap-highlight-color: transparent !important;
         outline: none !important;
     }
-
-    /* 5. HIDE SCROLLBARS */
     ::-webkit-scrollbar { display: none !important; width: 0 !important; }
     * { scrollbar-width: none !important; }
 
